--- a/public/app/funds.html
+++ b/public/app/funds.html
@@ -41,10 +41,10 @@
 </head>
 <body class="body dark">
 <div class="w-layout-blockcontainer page_loader--contain hide w-container">
-    <div class="loader--wrp">
+    <div class="loader-wrp">
         <div class="dvd_box"><img src="images/illusory-icon-circle-50.svg" loading="lazy" width="30" alt=""
                                   class="eye">
-            <div class="page_loader--text">Loading</div>
+            <div class="page_loader-text">Loading</div>
         </div>
     </div>
 </div>
@@ -60,9 +60,9 @@
                 <div id="cmdb" class="cmdb_hide"></div>
             </div>
         </div>
-        <div class="page_content--inner">
+        <div class="page_content-inner">
             <div class="sect_crds_content--container">
-                <div checkout_container="amount" class="sect_crds_content--inner flex">
+                <div checkout_container="amount" class="sect_crds_content-inner flex">
                     <div class="w-layout-grid funds_sect_crd_grid">
                         <div class="sect_crd small1">
                             <div class="sect_crd_tit_wrp">
@@ -71,7 +71,7 @@
                                     <div class="sect_crd_subtxt">Total funds to add to Illusory Wallet</div>
                                 </div>
                             </div>
-                            <div class="ind--wrap low_pad w-clearfix">
+                            <div class="ind-wrap low_pad w-clearfix">
                                 <div class="new_ind_subwrp_left">
                                     <div class="ind_det_wrp w-clearfix">
                                         <div indicator="fund_option" class="ind_det green">Custom ONLY Selected</div>
@@ -80,19 +80,19 @@
                             </div>
                             <div class="options_btn--grid">
                                 <div add_funds_btn="500" class="action_btn add_funds w-clearfix">
-                                    <div class="action_btn--text font_12">$500</div>
+                                    <div class="action_btn-text font_12">$500</div>
                                 </div>
                                 <div add_funds_btn="300" class="action_btn add_funds w-clearfix">
-                                    <div class="action_btn--text font_12">$300</div>
+                                    <div class="action_btn-text font_12">$300</div>
                                 </div>
                                 <div add_funds_btn="100" class="action_btn add_funds w-clearfix">
-                                    <div class="action_btn--text font_12">$100</div>
+                                    <div class="action_btn-text font_12">$100</div>
                                 </div>
                                 <div add_funds_btn="25" class="action_btn add_funds w-clearfix">
-                                    <div class="action_btn--text font_12">$25</div>
+                                    <div class="action_btn-text font_12">$25</div>
                                 </div>
                                 <div add_funds_btn="0" class="action_btn add_funds green w-clearfix">
-                                    <div class="action_btn--text font_12">Other</div>
+                                    <div class="action_btn-text font_12">Other</div>
                                 </div>
                             </div>
                             <div funds_crd="custom" class="fund_crd green">
@@ -115,7 +115,7 @@
                                                     </div>
                                                     <div class="add_funds_crd_subtxt" add_funds_currency="usd">USD</div>
                                                 </div>
-                                                <div class="interval_buttons--wrap right funds">
+                                                <div class="interval_buttons-wrap right funds">
                                                     <div interval_btn="add_funds" class="interval_btn add_funds" style="
     background: none;
 "><img src="https://imagedelivery.net/LFzmPcWb9I2s9RbnqAbhAw/4ddc92fd-7720-4f6f-33d4-018423173500/public"></div>
@@ -294,7 +294,7 @@
                         </div>
                     </div>
                 </div>
-                <div checkout_container="options" class="sect_crds_content--inner flex hide">
+                <div checkout_container="options" class="sect_crds_content-inner flex hide">
                     <div class="pymnt_optn_wrp w-clearfix">
                         <div back_btn="options" class="go_back_link w-clearfix">
                             <div id="modCancBtnIco" class="btn_icon back">
