--- a/public/app/new.html
+++ b/public/app/new.html
@@ -41,25 +41,25 @@
 </head>
 <body class="body dark">
 <div class="w-layout-blockcontainer page_loader--contain hide w-container">
-    <div class="loader--wrp">
+    <div class="loader-wrp">
         <div class="dvd_box"><img src="images/illusory-icon-circle-50.svg" loading="lazy" width="30" alt=""
                                   class="eye">
-            <div class="page_loader--text">Loading</div>
+            <div class="page_loader-text">Loading</div>
         </div>
     </div>
 </div>
 <div class="body_content">
     <div modal_overlay="new" class="modal_overlay hide">
         <div class="modal_crd">
-            <div class="modal_crd_content--wrap extra_padding">
-                <div class="modal_crd_tit--wrap">
+            <div class="modal_crd_content-wrap extra_padding">
+                <div class="modal_crd_tit-wrap">
                     <div class="modal_crd_tit">
                         <div class="modal_crd_tit_txt">Finalize</div>
                         <div class="modal_crd_subtxt">Product available instantly after confirming</div>
                     </div>
                     <div class="modal_dvdr_12"></div>
                 </div>
-                <div class="mod_crd_detail--wrap">
+                <div class="mod_crd_detail-wrap">
                     <div class="w-layout-grid qstack_c2">
                         <div class="w-layout-cell lt_c">
                             <div class="sect_crd_subtxt">Funds Available</div>
@@ -80,7 +80,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="mod_crd_detail--wrap">
+                <div class="mod_crd_detail-wrap">
                     <div class="w-layout-grid qstack_c2">
                         <div class="w-layout-cell lt_c">
                             <div class="sect_crd_subtxt">Due</div>
@@ -101,7 +101,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="mod_crd_detail--wrap">
+                <div class="mod_crd_detail-wrap">
                     <div class="w-layout-grid qstack_c2">
                         <div class="w-layout-cell lt_c">
                             <div class="sect_crd_subtxt">Funds After Deployment</div>
@@ -126,14 +126,14 @@
             </div>
             <div class="modal_crd--line-divider"></div>
             <div class="modal_crd_content_wrp_btm">
-                <div class="notice_subtext--wrap w-clearfix">
-                    <div class="notice--text">Irreversible Action</div>
+                <div class="notice_subtext-wrap w-clearfix">
+                    <div class="notice-text">Irreversible Action</div>
                     <img src="images/info-circle-duo-2.svg" loading="lazy" width="11" alt=""
-                         class="info_circle_duo--icon">
-                    <div class="info--wrap">
-                        <div class="info_grid--wrap">
-                            <div class="w-layout-grid info_grid--item-explain one noborder">
-                                <div checkout_info_explain="irreversible" class="info_item--text explain">This action is
+                         class="info_circle_duo-icon">
+                    <div class="info-wrap">
+                        <div class="info_grid-wrap">
+                            <div class="w-layout-grid info_grid-item-explain one noborder">
+                                <div checkout_info_explain="irreversible" class="info_item-text explain">This action is
                                     irreversible. Changes occur in realtime.
                                 </div>
                             </div>
@@ -179,9 +179,9 @@
                 <div id="cmdb" class="cmdb_hide"></div>
             </div>
         </div>
-        <div class="page_content--inner">
+        <div class="page_content-inner">
             <div class="sect_crds_content--container">
-                <div class="sect_crds_content--inner">
+                <div class="sect_crds_content-inner">
                     <div class="sect_crd">
                         <div class="sect_crd_tit_wrp">
                             <div class="sect_crd_tit w-clearfix">
@@ -330,11 +330,11 @@
                                 <div class="ind_det_wrp w-clearfix">
                                     <div indicator="action_required" class="ind_det green">No Pending Changes</div>
                                     <img src="images/info-circle-duo-2.svg" loading="lazy" width="11" alt=""
-                                         class="info_circle_duo--icon">
-                                    <div class="info--wrap">
-                                        <div class="info_grid--wrap">
-                                            <div class="w-layout-grid info_grid--item-explain one noborder">
-                                                <div checkout_info_explain="changes" class="info_item--text explain">
+                                         class="info_circle_duo-icon">
+                                    <div class="info-wrap">
+                                        <div class="info_grid-wrap">
+                                            <div class="w-layout-grid info_grid-item-explain one noborder">
+                                                <div checkout_info_explain="changes" class="info_item-text explain">
                                                     Indicates whether you have pending selected changes.
                                                 </div>
                                             </div>
@@ -356,15 +356,15 @@
                                             <div class="checkout_tit_info_ico w-clearfix"><img
                                                     src="images/info-circle-duo-2.svg" loading="lazy" width="11"
                                                     alt=""
-                                                    class="info_circle_duo--icon">
-                                                <div class="info--wrap sect-crd">
-                                                    <div class="info_grid--wrap">
+                                                    class="info_circle_duo-icon">
+                                                <div class="info-wrap sect-crd">
+                                                    <div class="info_grid-wrap">
                                                         <div checkout_info_item="product"
-                                                             class="w-layout-grid info_grid--item-explain one noborder">
+                                                             class="w-layout-grid info_grid-item-explain one noborder">
                                                             <div checkout_info_explain="product"
-                                                                 class="info_item--text explain">The type of product you&#x27;ve
+                                                                 class="info_item-text explain">The type of product you&#x27;ve
                                                                 selected and the quantity. e.g. <span
-                                                                        class="info_explain--text-code">AT&amp;T 5G x2</span>
+                                                                        class="info_explain-text-code">AT&amp;T 5G x2</span>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -417,12 +417,12 @@
                                             <div class="checkout_tit_info_ico w-clearfix"><img
                                                     src="images/info-circle-duo-2.svg" loading="lazy" width="11"
                                                     alt=""
-                                                    class="info_circle_duo--icon">
-                                                <div class="info--wrap sect-crd">
-                                                    <div class="info_grid--wrap">
-                                                        <div class="w-layout-grid info_grid--item-explain one noborder">
+                                                    class="info_circle_duo-icon">
+                                                <div class="info-wrap sect-crd">
+                                                    <div class="info_grid-wrap">
+                                                        <div class="w-layout-grid info_grid-item-explain one noborder">
                                                             <div sect_crd_changes_text="explain"
-                                                                 class="info_item--text explain">The price per proxy
+                                                                 class="info_item-text explain">The price per proxy
                                                                 calculated after subtracting any applicable member and
                                                                 bulk discounts.
                                                             </div>
@@ -656,12 +656,12 @@
                                             <div class="checkout_tit_info_ico w-clearfix"><img
                                                     src="images/info-circle-duo-2.svg" loading="lazy" width="11"
                                                     alt=""
-                                                    class="info_circle_duo--icon">
-                                                <div class="info--wrap sect-crd">
-                                                    <div class="info_grid--wrap">
-                                                        <div class="w-layout-grid info_grid--item-explain one noborder">
+                                                    class="info_circle_duo-icon">
+                                                <div class="info-wrap sect-crd">
+                                                    <div class="info_grid-wrap">
+                                                        <div class="w-layout-grid info_grid-item-explain one noborder">
                                                             <div checkout_info_explain="expires"
-                                                                 class="info_item--text explain">The expiration time
+                                                                 class="info_item-text explain">The expiration time
                                                                 selected for each proxy and any applicable
                                                                 length-specific savings.
                                                             </div>
@@ -734,12 +734,12 @@
                                                 <div class="checkout_tit_err_ico w-clearfix"><img
                                                         src="images/alert-triangle.svg" loading="lazy" width="15"
                                                         alt=""
-                                                        class="info_circle_duo--icon">
-                                                    <div class="info--wrap">
-                                                        <div class="info_grid--wrap">
-                                                            <div class="w-layout-grid info_grid--item-explain one noborder">
+                                                        class="info_circle_duo-icon">
+                                                    <div class="info-wrap">
+                                                        <div class="info_grid-wrap">
+                                                            <div class="w-layout-grid info_grid-item-explain one noborder">
                                                                 <div checkout_info_explain="expires"
-                                                                     class="info_item--text explain">This amount is
+                                                                     class="info_item-text explain">This amount is
                                                                     required in your Illusory wallet in order to
                                                                     complete the purchase.
                                                                 </div>
@@ -765,14 +765,14 @@
                                                 <div info="member_discount" class="checkout_tit_info_ico w-clearfix">
                                                     <img src="images/info-circle-duo-2.svg" loading="lazy"
                                                          width="11"
-                                                         height="11" alt="" class="info_circle_duo--icon">
-                                                    <div class="info--wrap sect-crd">
-                                                        <div class="info_grid--wrap">
-                                                            <div class="w-layout-grid info_grid--item-explain one noborder">
+                                                         height="11" alt="" class="info_circle_duo-icon">
+                                                    <div class="info-wrap sect-crd">
+                                                        <div class="info_grid-wrap">
+                                                            <div class="w-layout-grid info_grid-item-explain one noborder">
                                                                 <a href="settings/member" target="_blank"
                                                                    class="w-inline-block">
                                                                     <div checkout_info_explain="member"
-                                                                         class="info_item--text explain">Receive a
+                                                                         class="info_item-text explain">Receive a
                                                                         generous discount when you&#x27;re an official
                                                                         member of one of our forum partners. <span
                                                                                 class="info_explain--link">Enable Now</span>
