--- a/public/app/settings/account.html
+++ b/public/app/settings/account.html
@@ -42,49 +42,49 @@
 </head>
 <body class="body dark">
 <div class="w-layout-blockcontainer page_loader--contain hide w-container">
-    <div class="loader--wrp">
+    <div class="loader-wrp">
         <div class="dvd_box"><img src="../images/illusory-icon-circle-50.svg" loading="lazy" width="30" alt=""
                                   class="eye">
-            <div class="page_loader--text">Loading</div>
+            <div class="page_loader-text">Loading</div>
         </div>
     </div>
 </div>
 <div class="body_content">
     <div class="page_content--container">
         <div id="nav_sb" class="nav_sb">
-            <div class="w-layout-blockcontainer top_nav--wrp w-container">
-                <div class="sb_logo--wrp">
-                    <a href="../" class="sb_logo_link--wrp w-inline-block"><img
+            <div class="w-layout-blockcontainer top_nav-wrp w-container">
+                <div class="sb_logo-wrp">
+                    <a href="../" class="sb_logo_link-wrp w-inline-block"><img
                             src="../images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt=""
                             class="sb_logo--img"></a>
                 </div>
-                <div class="top_nav_menu_link--wrp">
-                    <div class="top_nav_menu_items--wrp settings">
+                <div class="top_nav_menu_link-wrp">
+                    <div class="top_nav_menu_items-wrp settings">
                         <a href="../" class="top_nav--link back w-inline-block">
-                            <div class="top_nav_link--text white">Settings</div>
+                            <div class="top_nav_link-text white">Settings</div>
                         </a>
                         <a href="../settings/account" aria-current="page"
                            class="top_nav--link account w-inline-block w--current">
-                            <div class="top_nav_link--text">Account</div>
+                            <div class="top_nav_link-text">Account</div>
                         </a>
                         <a href="../settings/member" class="top_nav--link member w-inline-block">
-                            <div class="top_nav_link--text">Member Discount</div>
+                            <div class="top_nav_link-text">Member Discount</div>
                         </a>
                         <a href="../settings/developers" class="top_nav--link dev w-inline-block">
-                            <div class="top_nav_link--text">Developers</div>
+                            <div class="top_nav_link-text">Developers</div>
                         </a>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="page_content--inner sb">
+        <div class="page_content-inner sb">
             <div class="page_header">
                 <div class="sect_header_wrp">
                     <div toggle="menu_btn" class="menu_toggle--btn"></div>
                     <div class="sect_head">Account</div>
                 </div>
             </div>
-            <div class="sect_crds_content--inner sb fw">
+            <div class="sect_crds_content-inner sb fw">
                 <div clerk="user_profile" class="sect_crd fw"></div>
             </div>
         </div>
