--- a/public/app/settings/developers.html
+++ b/public/app/settings/developers.html
@@ -42,49 +42,49 @@
 </head>
 <body class="body dark">
 <div class="w-layout-blockcontainer page_loader--contain hide w-container">
-    <div class="loader--wrp">
+    <div class="loader-wrp">
         <div class="dvd_box"><img src="../images/illusory-icon-circle-50.svg" loading="lazy" width="30" alt=""
                                   class="eye">
-            <div class="page_loader--text">Loading</div>
+            <div class="page_loader-text">Loading</div>
         </div>
     </div>
 </div>
 <div class="body_content">
     <div class="page_content--container">
         <div id="nav_sb" class="nav_sb">
-            <div class="w-layout-blockcontainer top_nav--wrp w-container">
-                <div class="sb_logo--wrp">
-                    <a href="../" class="sb_logo_link--wrp w-inline-block"><img
+            <div class="w-layout-blockcontainer top_nav-wrp w-container">
+                <div class="sb_logo-wrp">
+                    <a href="../" class="sb_logo_link-wrp w-inline-block"><img
                             src="../images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt=""
                             class="sb_logo--img"></a>
                 </div>
-                <div class="top_nav_menu_link--wrp">
-                    <div class="top_nav_menu_items--wrp settings">
+                <div class="top_nav_menu_link-wrp">
+                    <div class="top_nav_menu_items-wrp settings">
                         <a href="../" class="top_nav--link back w-inline-block">
-                            <div class="top_nav_link--text white">Settings</div>
+                            <div class="top_nav_link-text white">Settings</div>
                         </a>
                         <a href="../settings/account" class="top_nav--link account w-inline-block">
-                            <div class="top_nav_link--text">Account</div>
+                            <div class="top_nav_link-text">Account</div>
                         </a>
                         <a href="../settings/member" class="top_nav--link member w-inline-block">
-                            <div class="top_nav_link--text">Member Discount</div>
+                            <div class="top_nav_link-text">Member Discount</div>
                         </a>
                         <a href="../settings/developers" aria-current="page"
                            class="top_nav--link dev w-inline-block w--current">
-                            <div class="top_nav_link--text">Developers</div>
+                            <div class="top_nav_link-text">Developers</div>
                         </a>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="page_content--inner sb">
+        <div class="page_content-inner sb">
             <div class="page_header">
                 <div class="sect_header_wrp">
                     <div toggle="menu_btn" class="menu_toggle--btn"></div>
                     <div class="sect_head">Developers</div>
                 </div>
             </div>
-            <div class="sect_crds_content--inner sb fw">
+            <div class="sect_crds_content-inner sb fw">
                 <div class="sect_crd long1">
                     <div class="sect_crd_tit_wrp w-clearfix">
                         <a href="/docs/api-reference/introduction" target="_blank"
@@ -98,20 +98,20 @@
                             <div class="sect_crd_subtxt">Authenticate external requests to control your proxies</div>
                         </div>
                     </div>
-                    <div class="input_grid--wrap">
+                    <div class="input_grid-wrap">
                         <div class="w-layout-grid input--grid">
-                            <div class="input--wrap w-clearfix">
+                            <div class="input-wrap w-clearfix">
                                 <div class="skel_apikey fullheight">
                                     <div class="skel_apikey_bg"></div>
                                 </div>
-                                <div class="input_label_ind--wrap left">
-                                    <div class="input_label_ind--inner w-clearfix">
-                                        <div indicator="action-required" class="input_label_ind--text">MASTER</div>
-                                        <div class="info--wrap">
-                                            <div class="info_grid--wrap">
-                                                <div class="w-layout-grid info_grid--item-explain one noborder">
+                                <div class="input_label_ind-wrap left">
+                                    <div class="input_label_ind-inner w-clearfix">
+                                        <div indicator="action-required" class="input_label_ind-text">MASTER</div>
+                                        <div class="info-wrap">
+                                            <div class="info_grid-wrap">
+                                                <div class="w-layout-grid info_grid-item-explain one noborder">
                                                     <div checkout_info_explain="changes"
-                                                         class="info_item--text explain">Your unique license key used to
+                                                         class="info_item-text explain">Your unique license key used to
                                                         verify your lifetime discount. Post this on Illusory&#x27;s
                                                         forum thread.
                                                     </div>
@@ -120,10 +120,10 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="input_embed--wrap w-embed"><input disabled="" api_key="master" type="text"
+                                <div class="input_embed-wrap w-embed"><input disabled="" api_key="master" type="text"
                                                                               class="ill_input apikey"></div>
-                                <div class="input_btn--wrap two">
-                                    <div class="action_btn--inner w-clearfix">
+                                <div class="input_btn-wrap two">
+                                    <div class="action_btn-inner w-clearfix">
                                         <div action_btn_reveal="master" class="actions_btn reveal w-clearfix">
                                             <div action_btn_ico_reveal="master" class="btn_icon reveal">
                                                 <div class="btn_ldr_wrp w-embed">
@@ -159,20 +159,20 @@
                             </div>
                         </div>
                     </div>
-                    <div class="input_grid--wrap">
+                    <div class="input_grid-wrap">
                         <div class="w-layout-grid input--grid">
-                            <div class="input--wrap w-clearfix">
+                            <div class="input-wrap w-clearfix">
                                 <div class="skel_apikey fullheight">
                                     <div class="skel_apikey_bg"></div>
                                 </div>
-                                <div class="input_label_ind--wrap left">
-                                    <div class="input_label_ind--inner orange w-clearfix">
-                                        <div indicator="action-required" class="input_label_ind--text">Limited</div>
-                                        <div class="info--wrap">
-                                            <div class="info_grid--wrap">
-                                                <div class="w-layout-grid info_grid--item-explain one noborder">
+                                <div class="input_label_ind-wrap left">
+                                    <div class="input_label_ind-inner orange w-clearfix">
+                                        <div indicator="action-required" class="input_label_ind-text">Limited</div>
+                                        <div class="info-wrap">
+                                            <div class="info_grid-wrap">
+                                                <div class="w-layout-grid info_grid-item-explain one noborder">
                                                     <div checkout_info_explain="changes"
-                                                         class="info_item--text explain">Your unique license key used to
+                                                         class="info_item-text explain">Your unique license key used to
                                                         verify your lifetime discount. Post this on Illusory&#x27;s
                                                         forum thread.
                                                     </div>
@@ -181,11 +181,11 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="input_embed--wrap w-embed"><input disabled="" api_key="change_ip"
+                                <div class="input_embed-wrap w-embed"><input disabled="" api_key="change_ip"
                                                                               type="text" class="ill_input apikey">
                                 </div>
-                                <div class="input_btn--wrap two">
-                                    <div class="action_btn--inner w-clearfix">
+                                <div class="input_btn-wrap two">
+                                    <div class="action_btn-inner w-clearfix">
                                         <div action_btn_reveal="change_ip" class="actions_btn reveal w-clearfix">
                                             <div action_btn_ico_reveal="change_ip" class="btn_icon reveal">
                                                 <div class="btn_ldr_wrp w-embed">
