--- a/public/app/sign-in.html
+++ b/public/app/sign-in.html
@@ -47,7 +47,7 @@
                 <div id="sign-in" class="sign_in_crd"></div>
             </div>
         </div>
-        <div checkout_container="options" class="sect_crds_content--inner hide">
+        <div checkout_container="options" class="sect_crds_content-inner hide">
             <div class="pymnt_optn_wrp w-clearfix">
                 <div back_btn="options" class="go_back_link w-clearfix">
                     <div id="modCancBtnIco" class="btn_icon back">
