--- a/public/app/index.html
+++ b/public/app/index.html
@@ -41,23 +41,23 @@
 </head>
 <body class="body dark">
 <div class="w-layout-blockcontainer page_loader--contain hide w-container">
-    <div class="loader--wrp">
+    <div class="loader-wrp">
         <div class="dvd_box"><img src="app/images/illusory-icon-circle-50.svg" loading="lazy" width="30" alt=""
                                   class="eye">
-            <div class="page_loader--text">Loading</div>
+            <div class="page_loader-text">Loading</div>
         </div>
     </div>
 </div>
 <div class="body_content">
     <div class="page_content--container">
         <div id="nav_sb" class="nav_sb">
-            <div class="w-layout-blockcontainer top_nav--wrp w-container">
-                <div class="sb_logo--wrp">
-                    <a href="/app" aria-current="page" class="sb_logo_link--wrp w-inline-block w--current"><img
+            <div class="w-layout-blockcontainer top_nav-wrp w-container">
+                <div class="sb_logo-wrp">
+                    <a href="/app" aria-current="page" class="sb_logo_link-wrp w-inline-block w--current"><img
                             src="app/images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt=""
                             class="sb_logo--img"></a>
                 </div>
-                <div class="srchbr--wrp">
+                <div class="srchbr-wrp">
                     <div id="cmdb" class="cmd_bar"><img src="app/images/search-lg.svg" loading="lazy" width="14"
                                                         height="14"
                                                         alt="" class="image-14">
@@ -67,22 +67,22 @@
                         </div>
                     </div>
                 </div>
-                <div class="top_nav_menu_link--wrp">
-                    <div class="top_nav_menu_items--wrp">
+                <div class="top_nav_menu_link-wrp">
+                    <div class="top_nav_menu_items-wrp">
                         <a href="/app" aria-current="page" class="top_nav--link start w-inline-block w--current">
-                            <div class="top_nav_link--text">Get Started</div>
+                            <div class="top_nav_link-text">Get Started</div>
                         </a>
                         <a href="app/new" class="top_nav--link add w-inline-block">
-                            <div class="top_nav_link--text">Deploy Proxies</div>
+                            <div class="top_nav_link-text">Deploy Proxies</div>
                         </a>
                         <a href="app/allocate" class="top_nav--link allocate w-inline-block">
-                            <div class="top_nav_link--text">Extend Time</div>
+                            <div class="top_nav_link-text">Extend Time</div>
                         </a>
                         <a href="app/funds" class="top_nav--link wallet w-inline-block">
-                            <div class="top_nav_link--text">Fund Wallet</div>
+                            <div class="top_nav_link-text">Fund Wallet</div>
                         </a>
                     </div>
-                    <div class="sb_btn--wrp w-clearfix">
+                    <div class="sb_btn-wrp w-clearfix">
                         <a href="app/dashboard" class="sb_btn black w-inline-block w-clearfix">
                             <div checkout_btn_continue="ico" class="sb_btn_ico dash"></div>
                             <div checkout_btn_continue="text" class="action_btn_text">Dashboard</div>
@@ -90,31 +90,31 @@
                     </div>
                 </div>
             </div>
-            <div class="w-layout-blockcontainer bttm_nav--wrp w-container">
+            <div class="w-layout-blockcontainer bttm_nav-wrp w-container">
                 <a href="#" class="bttm_nav--link support cmdbhelp--nav w-inline-block">
-                    <div class="bttm_nav_link--text">Support</div>
+                    <div class="bttm_nav_link-text">Support</div>
                 </a>
                 <a href="app/settings/account" class="bttm_nav--link settings w-inline-block">
-                    <div class="bttm_nav_link--text">Settings</div>
+                    <div class="bttm_nav_link-text">Settings</div>
                 </a>
-                <div class="user_btn--wrap">
-                    <div class="user_btn--inner">
-                        <div clerk="user_btn" class="user_btn--item"></div>
-                        <div class="user_btn--item">
-                            <div clerk="user_btn_text" class="user_btn_item--text">User</div>
+                <div class="user_btn-wrap">
+                    <div class="user_btn-inner">
+                        <div clerk="user_btn" class="user_btn-item"></div>
+                        <div class="user_btn-item">
+                            <div clerk="user_btn_text" class="user_btn_item-text">User</div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="page_content--inner sb">
+        <div class="page_content-inner sb">
             <div class="page_header">
                 <div class="sect_header_wrp">
                     <div toggle="menu_btn" class="menu_toggle--btn"></div>
                     <div class="sect_head">Getting Started</div>
                 </div>
             </div>
-            <div checkout_container="options" class="sect_crds_content--inner">
+            <div checkout_container="options" class="sect_crds_content-inner">
                 <div class="gt_strt_crd_wrp">
                     <div class="w-layout-grid gt_strt_crd_grid">
                         <div start_crd="preview" class="sect_crd_skel_wrp">
