--- a/public/app/processing-payment.html
+++ b/public/app/processing-payment.html
@@ -41,10 +41,10 @@
 </head>
 <body class="body dark">
 <div class="w-layout-blockcontainer page_loader--contain hide w-container">
-    <div class="loader--wrp">
+    <div class="loader-wrp">
         <div class="dvd_box"><img src="images/illusory-icon-circle-50.svg" loading="lazy" width="30" alt=""
                                   class="eye">
-            <div class="page_loader--text">Loading</div>
+            <div class="page_loader-text">Loading</div>
         </div>
     </div>
 </div>
@@ -53,7 +53,7 @@
         <div checkout_container="amount" class="sect_content alt1">
             <div class="sect_bgico">
                 <div class="bgico">
-                    <div class="big_ico_content--wrap">
+                    <div class="big_ico_content-wrap">
                         <div class="bgico_tit">
                             <div class="bgico_tit_txt">Processing payment</div>
                             <div class="bgico_subtxt">We’ve received your payment and funds should be added to your
@@ -87,7 +87,7 @@
                 </div>
             </div>
         </div>
-        <div checkout_container="options" class="sect_crds_content--inner hide">
+        <div checkout_container="options" class="sect_crds_content-inner hide">
             <div class="pymnt_optn_wrp w-clearfix">
                 <div back_btn="options" class="go_back_link w-clearfix">
                     <div id="modCancBtnIco" class="btn_icon back">
