--- a/public/app/sign-up.html
+++ b/public/app/sign-up.html
@@ -53,7 +53,7 @@
                 </div>
             </div>
         </div>
-        <div checkout_container="options" class="sect_crds_content--inner hide">
+        <div checkout_container="options" class="sect_crds_content-inner hide">
             <div class="pymnt_optn_wrp w-clearfix">
                 <div back_btn="options" class="go_back_link w-clearfix">
                     <div id="modCancBtnIco" class="btn_icon back">
